# assets-service

./: .env.example  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  main.py  pyproject.toml
app/: __init__.py  settings.py  utils.py
app/route/: __init__.py  assets.py  avatar.py  get_seasonal.py  medals.py  menu_content.py
app/state/: services.py
