[tool.mypy]
plugins = ["pydantic.mypy"]
strict = true
disallow_untyped_calls = false

[[tool.mypy.overrides]]
module = [
    "httpx.*",
    "fastapi.*",
    "uvicorn.*",
    "dotenv.*",
]
ignore_missing_imports = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.isort]
add_imports = ["from __future__ import annotations"]
force_single_line = true
profile = "black"

[tool.poetry]
name = "assets-service"
version = "0.1.0"
description = "Assets service"
authors = ["remeliah"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.115.0"
uvicorn = { extras = ["standard"], version = "^0.30.0" }
httpx = "^0.27.0"
orjson = "^3.10.7"
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]
black = "^24.1.1"
isort = "^5.13.2"
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
